--- a/style.css
+++ b/style.css
@@ -42,8 +42,10 @@
     margin: auto;
 }
 
-.MyUXSKills {
+.SkillsSection {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 .SkillCard1 {
         width: 33%;
@@ -60,3 +62,26 @@
         margin: 20px;
         padding: 15px;
     }
+button {
+    width: 175px;
+    height: 40px;
+    border-radius: 8%;
+    border: none;
+}
+.WorkCard1, .WorkCard2, .WorkCard3 {
+    display: flex;
+    flex-direction: row;
+}
+.WorkSection {
+    display: grid;
+    grid-area: myArea;
+    grid-template-areas: 'myArea myArea myArea';
+}
+
+
+
+
+
+@media only screen and (max-width:600) {
+    
+}
